--- a/tufte2.scss
+++ b/tufte2.scss
@@ -398,10 +398,11 @@ article {
         width: $width;
         margin-top: 0;
         margin-bottom: $ledding;
-        font-size: 1.1rem;
+        font-size: $psize;
         line-height: 1.3;
         vertical-align: baseline;
         position: relative;
+        color: darkgray;
     }
 
     .sidenote-number {
