--- a/instapark.jade
+++ b/instapark.jade
@@ -48,10 +48,12 @@ html(lang="en")
                                 &#8853;
                             input(type="checkbox" id="mn-figure-1" class="margin-toggle")
                             span.marginnote Talking to friends at other universities, I found out that this issue exists elsewhere as well. For this project I restricted the target audience to University of Michigan community.                        
+                            span.marginnote Required technology exists to implement a solution.
                                                 
                         p Parking is a problem at University of Michigan. During class hours, students and faculty find it hard to find parking inside the campus. Fortunately, however, parking spots do exist &mdash; it is just hard to find them. 
                         p Add to that, the prices of parking spots vary by place and time of day. This problem is amplified during Michigan events when everybody wants to for example, park close to the stadium. Students who are usually running short on cash have a tough time finding parking. Here too, students are willing to rent out their personal parking spots for additional money during events. 
-                        p Unfortunately, no application exists to solve these problems. As a student, I was myself frustrated by these problems and thought of building an application to address these needs.
+                        p Unfortunately, no application exists to solve these problems even when all the technology to implement a solution exists. As a student, I was myself frustrated by these problems and thought of building an application to address these needs.
+                        p I built a solution to address these needs.
                         
                         h2 Process
                         
@@ -64,7 +66,7 @@ html(lang="en")
                         
                         h3 Deliverables and Roadmap
                         
-                        p I wanted to be thoroughly grounded in research, but I also wanted to iterate quickly and produce deliverables to track and show progress. To that end, I prepared following roadmap. 
+                        p I wanted to be thoroughly grounded in research and also wanted to iterate quickly and produce deliverables to track and show progress. To that end, I prepared following roadmap. 
                         p I executed it properly and finished on time.
         
         .container-fluid.showcase
@@ -135,7 +137,7 @@ html(lang="en")
                         
                         h3 Storyboarding &mdash; Communicating MVP1 to stakeholders
                         
-                        p  With the initial features decided, I did storyboarding to prioritize scenarios and explore the experience I would like to provide. I also shared this storyboard with stakeholders and they were able to get a feel of the solution that could be provided by the application.
+                        p  With the initial features decided, I did storyboarding to communicate MVP1 with stakeholders and they were able to get a feel of the solution that could be provided by the application.
                         
         .container-fluid.showcase
             .row
@@ -183,8 +185,12 @@ html(lang="en")
                         h3 Rigorous evaluation of alternatives
                         
                         p The paper prototype indicated that app's IA and interactions need to be thought out carefully and I decided to take a more rigorous approach to get the information architecture and flow optimized for the use cases.
-                        p I perused my research findings and came up with a list of design goals (criteria) to help me evaluate various design alternatives.
+                        p I perused my research findings and came up with a list of <strong>design goals</strong> (criteria) to help me evaluate various design alternatives.
                         
-                        
-                        
+                        ol
+                            li Keep interactions to a minimum
+                            li Optimize visual design for outdoor conditions
+                            li Success of seller platform is crucial to finding event parking
+                            li Help customers become successful sellers on your platform
+                            li Behave smart and execute recoverable actions
                         
