Fix body border top color

--- a/work.css
+++ b/work.css
@@ -817,6 +817,6 @@ article {
 
 /* line 9, /home/local/ANT/ajgopala/portfolio_new/work.scss */
 body {
-  border-top: 5px solid red; }
+  border-top: 6px solid #293E68; }
 
 /*# sourceMappingURL=work.css.map */
